deploy/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viize-parking
  namespace: viize-parking
spec:
  selector:
    app: viize-parking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
